Refactor verdier handling and update H2 default values #deploy-levende-arbeidsforhold-ansettelse
Changed `verdier` construction in `ParameterService` to use `Arrays.asList`. Updated H2 default configuration to remove braces from `verdier` values for better parsing.